muted selfie video and tried test-proofing the https redirect

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -18,7 +18,7 @@
   		<h1 id="header"></h1>
       
       <div id="room-info" style="display: none;">  		
-        <video id="mirror" playsinline autoplay style="width: 400px; height: 250px; background: url('../img/noise.gif');"></video>
+        <video id="mirror" playsinline autoplay muted style="width: 400px; height: 250px; background: url('../img/noise.gif');"></video>
 
     		<p>
     			Currently there are <span id="users" style="font-weight: bold;">0</span> people in the chat
@@ -33,7 +33,7 @@
     <div id="videos">
       <div class="video-frame">
         <h4>You</h4>
-        <video id="selfie" playsinline autoplay></video>
+        <video id="selfie" playsinline autoplay muted></video>
       </div>
     </div>
 
