--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>AW-chat</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Baloo+2:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
   </head>
